--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/user-event": "^14.2.1"
+    "@testing-library/user-event": "^14.2.1",
+    "msw": "^0.42.3",
+    "whatwg-fetch": "^3.6.2"
   }
 }
