--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "axios": "^0.27.2",
     "bulma": "^0.9.4",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
